fix: improve perf for single source queries (#15)
* fix: improve perf for single source queries

* Parallelize the totals and entities request. Also address PR comments

* Remove orderBys from select and filter node and add diff codecov for OptimizingVisitor

* Optimize to skip total when entity id EQ filter is specified

* Address some PR minor comments